--- a/homework_front/.eslintrc
+++ b/homework_front/.eslintrc
@@ -18,11 +18,7 @@
     "__BASENAME__": true
   },
   "settings": {
-    "import/resolver": {
-      "webpack": {
-        "config": "webpack.config.js"
-      }
-    }
+    "import/resolver": "webpack"
   },
   "rules": {
     "semi": [2, "never"],
